# mini-foundry-supplychain

./: .env  .env.example  README.md  debug_cold_chain_neo4j.py  main.py  pyproject.toml  requirements.txt  setup_aura.py  streamlit_app.py  test_cold_chain_debug.py  test_graph.py
.claude/: settings.local.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
.streamlit/: config.toml
airbyte/: airbyte-docker-compose.yml
dashboard/: app.py
data/: customers.csv  products.csv  shipments.csv  suppliers.csv  warehouses.csv
data/pilot_missing_supporting_files/: cold_chain_readings.csv  costs.csv  events.csv  lanes.csv  lots.csv  shipments_lots.csv  sla_rules.csv
docs/: 01_PROJECT_OVERVIEW.md  02_TECHNICAL_ARCHITECTURE.md  03_SPRINT_ROADMAP.md  04_DATA_SCHEMAS_ONTOLOGY.md  05_IMPLEMENTATION_EXAMPLES.md  06_PROJECT_SETUP_GUIDE.md  ENTERPRISE_INTEGRATION.md  ORACLE_SETUP_GUIDE.md  PHASE1_COMPLETION_SUMMARY.md
neo4j/: constraints.cypher  load_data.cypher  queries.cypher
scripts/: direct_load_data.py  load_pilot_data.py  setup_neo4j.py
src/: __init__.py  analytics.py  data_loader.py  graph_builder.py  simulator.py  utils.py
src/connectors/: __init__.py  base_connector.py  connector_factory.py  oracle_connector.py  sap_connector.py
src/models/: __init__.py  supply_chain_entities.py
