[project]
name = "mini-foundry-supplychain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "py2neo>=2021.2.4",
    "seaborn>=0.13.2",
    "streamlit>=1.50.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
]
