[project]
name = "mini-foundry-supplychain"
version = "0.2.0"
description = "Enterprise Supply Chain Control Tower with SAP S/4HANA and Oracle integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core Data & Analytics
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "seaborn>=0.13.2",
    "scikit-learn>=1.3.0",
    "python-dateutil>=2.8.0",

    # Database Connectors
    "neo4j>=5.0.0",
    "py2neo>=2021.2.4",
    "oracledb>=2.0.0",  # Oracle connector
    "sqlalchemy>=2.0.0",  # SQL ORM

    # SAP Integration
    "requests>=2.31.0",
    "requests-oauthlib>=1.3.1",
    # Note: pyrfc requires SAP NetWeaver RFC SDK (not on PyPI)
    # Install manually if needed: https://github.com/SAP/PyRFC

    # API & Web Framework
    "streamlit>=1.50.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # Data Validation & Models
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",

    # Configuration & Environment
    "python-dotenv>=1.0.0",

    # Performance & Caching
    "redis>=5.0.0",

    # Messaging (optional)
    "kafka-python>=2.0.2",
    "pika>=1.3.0",  # RabbitMQ
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
]
